--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,13 @@
-Flask
-torch
-torchvision
-basicsr>=1.4.2
 realesrgan
+Flask==3.1.1
+torch==2.2.2
+torchvision==0.17.2
+basicsr==1.4.2
 facexlib>=0.2.5
 gfpgan>=1.3.5
-numpy
 opencv-python
 Pillow
+tqdm
+numpy
 tqdm
 gunicorn
