--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,12 @@
-realesrgan
+realesrgan>=0.3.0
 Flask==3.1.1
 torch==2.2.2
 torchvision==0.17.2
-basicsr==1.4.2
+basicsr>=1.4.4
 facexlib>=0.2.5
 gfpgan>=1.3.5
 opencv-python
 Pillow
 tqdm
 numpy
-tqdm
 gunicorn
