--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,12 @@
-realesrgan>=0.3.0
 Flask==3.1.1
-torch==2.2.2
-torchvision==0.17.2
-basicsr>=1.4.4
-facexlib>=0.2.5
-gfpgan>=1.3.5
-opencv-python
-Pillow
-tqdm
-numpy
-gunicorn
+torch==2.1.0
+torchvision==0.16.0
+basicsr==1.4.2
+realesrgan==0.3.0
+facexlib==0.3.0
+gfpgan==1.3.8
+opencv-python-headless==4.8.1.78
+Pillow==10.0.1
+numpy==1.24.3
+tqdm==4.66.1
+gunicorn==21.2.0
