Fix: Add libglib2.0-0 to support OpenCV

--- a/.dockerignore
+++ b/.dockerignore
@@ -1,17 +1,21 @@
-__pycache__/
+__pycache__
 *.pyc
 *.pyo
 *.pyd
-env/
-.venv/
-uploads/
-results/
+.Python
+.git
+.gitignore
+README.md
+.env
+.venv
+venv/
+.pytest_cache
+.coverage
+htmlcov/
 .DS_Store
+Thumbs.db
 *.log
-*.bak
-*.swp
-*.zip
-*.tar.gz
-.idea/
-.vscode/
-*.egg-info/
+node_modules/
+.dockerignore
+Dockerfile
+render.yaml
