Fix: Add libglib2.0-0 to support OpenCV

--- a/render.yaml
+++ b/render.yaml
@@ -5,9 +5,7 @@ services:
     plan: starter
     dockerfilePath: ./Dockerfile
     autoDeploy: true
-    buildCommand: ""  # Optional - Docker handles the build
-    startCommand: ""  # Optional - Docker handles the start
-    healthCheckPath: /health  # Optional - uses your health endpoint
+    healthCheckPath: /health  
     envVars:
       - key: PORT
         value: 10000
