--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,17 @@
+# Web framework
 Flask==3.1.1
+gunicorn==21.2.0
+
+# Real-ESRGAN Stack
 torch==2.1.0
 torchvision==0.16.0
 basicsr==1.4.2
 realesrgan==0.3.0
 facexlib==0.3.0
 gfpgan==1.3.8
-opencv-python-headless==4.8.1.78
-Pillow==10.0.1
+
+# Core Libraries
 numpy==1.24.3
+Pillow==10.0.1
+opencv-python-headless==4.8.1.78
 tqdm==4.66.1
-gunicorn==21.2.0
