Size problem solution

--- a/requirements.txt
+++ b/requirements.txt
@@ -3,8 +3,8 @@ Flask==3.1.1
 gunicorn==21.2.0
 
 # Real-ESRGAN Stack
-torch==2.1.0
-torchvision==0.16.0
+torch==2.0.1+cpu
+torchvision==0.15.2+cpu
 basicsr==1.4.2
 realesrgan==0.3.0
 facexlib==0.3.0
